# piedpiper-picli

./: .gitignore  .readthedocs.yml  .travis.yml  .yamllint  CONTRIBUTING.md  Dockerfile  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
docs/source/: conf.py  index.rst  intro.rst
docs/source/developer/: api.rst  architecture.rst  contributing.rst  datamodel.rst  index.rst  testing.rst
docs/source/developer/specs/: piedpiper-openapi.yml  runvars-schema.yaml
docs/source/user/: configuration.rst  examples.rst  index.rst  installation.rst
picli/: __init__.py  __main__.py  config.py  logger.py  shell.py  stage.py  util.py
picli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
picli/actions/: base.py
picli/actions/sast/: cppcheck.py  noop.py
picli/actions/styler/: cpplint.py  flake8.py  noop.py
picli/actions/validators/: validator.py
picli/command/: __init__.py  base.py  display.py  lint.py  run.py  sast.py  style.py  unit.py  validate.py
picli/configs/: __init__.py  base_pipe.py  basepipe.py  lint_pipe.py  lintconfig.py  lintpipe.py  run_config.py  sast_pipe.py  style_pipe.py  unit_pipe.py  validate_pipe.py
picli/linter/: base.py  cpplint.py  flake8.py  noop.py  pylint.py
picli/model/: base_schema.py  lint_pipeconfig_schema.py  sast_pipeconfig_schema.py  stage_schema.py  style_pipeconfig_schema.py  unit_pipeconfig_schema.py  validate_pipeconfig_schema.py
picli/sast/: base.py  cppcheck.py  noop.py  pybandit.py
picli/styler/: base.py  cpplint.py  flake8.py  noop.py
picli/unit/: base.py  noop.py  pytest.py
picli/validators/: validator.py
tests/functional/: picli.yml  run-tests.sh
tests/functional/cpp_and_python_project/: .gitlab-ci.yml
tests/functional/cpp_and_python_project/piedpiper.d/: pi_global_vars.yml
tests/functional/cpp_and_python_project/src/: charon_config.txt  cloud.py  functional.py  io_thread.h  scanner.py  worker.py
tests/functional/cpp_and_python_project/src/api/: app.py
tests/functional/cpp_and_python_project/src/cloudutils/: base.py
tests/functional/cpp_and_python_project/src/model/: base.py
tests/functional/cpp_project/: .gitlab-ci.yml  test.sh
tests/functional/cpp_project/piedpiper.d/: pi_global_vars.yml
tests/functional/python_project/: .gitlab-ci.yml  MANIFEST.in  charon_config.txt  picli.yml  requirements.txt  setup.py  test.sh
tests/functional/python_project/charon/: cloud.py  config.py  functional.py  notification.py  util.py
tests/functional/python_project/charon/api/: app.py
tests/functional/python_project/piedpiper.d/: .pi_state.yml  pi_global_vars.yml
tests/functional/python_project/tests/: run-tests.sh
tests/unit/: conftest.py  test_config.py  test_logger.py  test_stages.py  test_util.py
tests/unit/command/: conftest.py  test_base.py  test_display.py  test_run.py  test_style.py
tests/unit/model/: test_base_schema.py  test_stage_schema.py
tools/scripts/: setup-env.sh
(+50 files in other folders)
