[metadata]
name = picli
maintainer = Nick Wilburn
maintainer_email = senior.crepe@gmail.com
summary = PiCli
license = BSD
description-file = README.md
home-page = https://github.com/ragingpastry/picli
requires-python = >=3.6

[options.entry_points]
console_scripts =
  picli = picli.shell:main

[wheel]
universal = 1