[metadata]
name = picli
author = Nick Wilburn
author_email = nwilburn@globalinfotek.com
url = https://github.com/AFCYBER-DREAM/piedpiper-picli
maintainer = AFCYBER DREAM Team
maintainer_email = dream@globalinfotek.com
description = A pipeline validation and execution framework
license = BSD
long_description = file: README.md
project_urls = 
	Release Management = https://github.com/AFCYBER-DREAM/piedpiper-picli
	Source Code = https://github.com/AFCYBER-DREAM/piedpiper-picli

[options]
use_scm_version = True
python_requires = >=3.7
package_dir =
    = .
packages = find:
zip_safe = False

setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

install_requires =
    anyconfig==0.9.8
    colorama==0.4.1
    click==7.0
    marshmallow>=3.0.0rc4
    PyYAML==3.13
    requests==2.21.0
    minio

[options.extras_require]
docs =
	Sphinx
	sphinxcontrib-openapi
	sphinx-jsonschema
	sphinx_rtd_theme

[options.entry_points]
console_scripts =
    picli = picli.__main__:main

[options.packages.find]
where = .

[wheel]
universal = 1

[flake8]
max-line-length = 90

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source
